--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ExtendedCase.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ExtendedCase.cshtml
@@ -322,6 +322,7 @@
     /* FileUpload */
     @Html.HiddenFor(m => Model.CaseDataModel.CaseFileKey)
 
+    @Html.Hidden("ReturnUrl", (object)ViewBag.ReturnUrl)
 }
 <div class="container-fluid dh-container">
     <ul class="nav nav-tabs" id="tabsArea">
