[ADD] #59471 ProductArea dropdown scroll

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
@@ -3985,3 +3985,9 @@ th.sorting_disabled
     border: none;
     display: inline-block;
 }
+
+.subddMenu {
+    overflow-x: hidden;
+    overflow-y: auto;
+    direction: rtl;
+}
