--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Input.cshtml
@@ -1022,7 +1022,7 @@
                                                     <button class="btn dropdown-toggle" data-toggle="dropdown" @disabledProductArea id="dropDownBtn">
                                                         <span class="caret"></span>
                                                     </button>
-                                                    <ul class="dropdown-menu" style="z-index:99999999999;">
+                                                    <ul class="dropdown-menu subddMenu parentddMenu" style="z-index:99999999999;">
                                                         <li><a href="#">@Translation.Get("--")</a></li>
                                                         @Html.ProductAreaDropdownButtonString(Model.productAreas, true, Model.case_.ProductArea_Id)
                                                     </ul>
