[FIX] #59930 CaseID instead of CaseNumber in Questionnaire

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/QuestionnaireAnswer/Quiestionnaire.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/QuestionnaireAnswer/Quiestionnaire.cshtml
@@ -38,7 +38,7 @@
                         </div>
                         <div class="row">
                             <div class="span12">
-                                @Translation.Get("Ärende", Model.LanguageId, Enums.TranslationSource.TextTranslation, Model.CustomerId): @Model.QuestionnaireModel.CaseId
+                                @Translation.Get("Ärende", Model.LanguageId, Enums.TranslationSource.TextTranslation, Model.CustomerId): @Model.QuestionnaireModel.CaseNumber
                             </div>
                         </div>
                         <div class="row">
