--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/FeedbackAnswer/ThankYou.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/FeedbackAnswer/ThankYou.cshtml
@@ -5,21 +5,24 @@
 
 <div class="content">
     <div class="container">
-        @Html.Raw(Model.Html)
-        @using (Html.BeginForm("SaveComment", "FeedbackAnswer", new {customerId = Model.CustomerId, languageId = Model.LanguageId, questionId = Model.QuestionId, noteText = Model.NoteText}, FormMethod.Post))
+        <div id="feedbackThanksText" style="display: none">
+            @Html.Raw(Model.Html)
+        </div>
+        @using (Html.BeginForm("SaveComment", "FeedbackAnswer", new { customerId = Model.CustomerId, languageId = Model.LanguageId, questionId = Model.QuestionId, noteText = Model.NoteText }, FormMethod.Post))
         {
             if (Model.IsShowNote)
             {
-                @Html.DisplayFor(m => m.NoteLabel)
-                <br/>
-                @Html.TextAreaFor(m => m.NoteText, new {id = "feedbackComment"})
-                @Html.ValidationMessageFor(m => m.NoteText)
-                @Html.HiddenFor(m => m.CustomerId)
-                @Html.HiddenFor(m => m.LanguageId)
-                @Html.HiddenFor(m => m.QuestionId)
-                <br/>
-                <a href="#" id="btnSaveComment" class="btn templateQuickButton"> Save </a>
-                <span id="saveMessage" style="display: none"></span>
+                <div id="feedbackContent">
+                    @Html.DisplayFor(m => m.NoteLabel)
+                    <br/>
+                    @Html.TextAreaFor(m => m.NoteText, new {id = "feedbackComment"})
+                    @Html.ValidationMessageFor(m => m.NoteText)
+                    @Html.HiddenFor(m => m.CustomerId)
+                    @Html.HiddenFor(m => m.LanguageId)
+                    @Html.HiddenFor(m => m.QuestionId)
+                    <br/>
+                    <a href="#" id="btnSaveComment" class="btn templateQuickButton"> Save </a>
+                </div>
             }
         }
     </div>
@@ -39,18 +42,10 @@
                         },
                         dataType: 'json',
                         success: function(data) {
-                            if (data){
-                                $("#btnSaveComment").attr('disabled', 'disabled');
-                                $("#feedbackComment").attr('disabled', 'disabled');
+                            if (data && data.success) {
                                 $('#btnSaveComment').unbind('click');
-                                $('#btnSaveComment').hide();
-                                $('#saveMessage').text(data.message);
-                                $('#saveMessage').show();
-                                if (data.success) {
-                                    $('#saveMessage').addClass("textgreen");
-                                } else {
-                                    $('#saveMessage').addClass("textred");
-                                }
+                                $("#feedbackContent").hide();
+                                $("#feedbackThanksText").show();
                             }
                         }
                     });
