[ADD] #59440 Add extra e-mail addresses questionnaire

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Input.cshtml
@@ -14,7 +14,7 @@
 @Scripts.Render("~/bundles/cases/_input")
 @if (Model.IsReadOnly(GlobalEnums.TranslationCaseFields.AddFollowersBtn, CaseSolutionFields.AddFollowersBtn) && Model.caseFieldSettings.IsFieldVisible(GlobalEnums.TranslationCaseFields.AddFollowersBtn))
 {
-    @Scripts.Render(BundleConfig.ScriptNames.CaseUserSearchCommon)
+    @Scripts.Render(BundleConfig.ScriptNames.UserSearchCommon)
 }
 
 <script type="text/javascript">
