[FIX] #59897 Fixed Translation for Status bar(Information bar)

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/ExtendedCase/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/ExtendedCase/_Input.cshtml
@@ -4,13 +4,13 @@
 <div class="content">
     <div class="container">
         <ul class="nav nav-tabs" id="myTab">
-            <li class="active"><a href="#subfragment-1">@Translation.GetCoreTextTranslation("Statusfält") - @Model.Customer.Name</a></li>
+            <li class="active"><a href="#subfragment-1">@Translation.GetCoreTextTranslation("Informationsfält") - @Model.Customer.Name</a></li>
         </ul>
 
         <div class="tab-content">
             <div class="tab-pane tab-pane-border active" id="fragment1">
                 <div class="container">
-                    @*<h4>@Translation.GetCoreTextTranslation("Statusfält"))</h4>*@
+                    @*<h4>@Translation.GetCoreTextTranslation("Informationsfält"))</h4>*@
                     <div class="row">
                         <div class="span12">
                             <table class="tableform">
