--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/Shared/_MasterDataPanelContent.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/Shared/_MasterDataPanelContent.cshtml
@@ -249,8 +249,8 @@
     </a>
     <ul class="dropdown-menu">
         <li>
-            <a href="@Url.Action("Edit", "ExtendedCase", new {customerId = Model.Id, languageId = Model.Language_Id})">
-                @Translation.GetCoreTextTranslation("Statusfält")
+            <a href="@Url.Action("Edit", "ExtendedCase", new {customerId = Model.Id})">
+                @Translation.GetCoreTextTranslation("Informationsfält")
             </a>
         </li>
     </ul>
