--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/Shared/_MasterDataPanelContent.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/Shared/_MasterDataPanelContent.cshtml
@@ -245,7 +245,7 @@
 </li>
 <li class="dropdown-submenu">
     <a href="#">
-        @Translation.GetCoreTextTranslation("Uttökat ärende")
+        @Translation.GetCoreTextTranslation("Utökat ärende")
     </a>
     <ul class="dropdown-menu">
         <li>
